fix(talent): height
* fix talent in spec height creating scrollbars

#2018

--- a/styles/mandar.css
+++ b/styles/mandar.css
@@ -1012,6 +1012,10 @@ img {
   max-height: 20%;
 }
 
+.starwarsffg .talent-grid .talent-body {
+  overflow-y: hidden;
+}
+
 .starwarsffg .talent-grid .talent-tier-row-label {
   flex: 0 0 30px;
   max-width: 30px;
